--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="cyT-BZ-laX">
-                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <rect key="frame" x="0.0" y="159" width="393" height="659"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="Tgr-da-LHS" detailTextLabel="wTE-VZ-6vi" style="IBUITableViewCellStyleSubtitle" id="VrQ-eK-Fez">
@@ -46,13 +46,23 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="yJM-Za-WPu">
+                                <rect key="frame" x="0.0" y="103" width="393" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="dhE-7Q-1kV"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="yJM-Za-WPu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IR6-hZ-7Vl"/>
+                            <constraint firstItem="yJM-Za-WPu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Il5-ck-Wmx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cyT-BZ-laX" secondAttribute="trailing" id="JdD-f8-K2W"/>
+                            <constraint firstItem="cyT-BZ-laX" firstAttribute="top" secondItem="yJM-Za-WPu" secondAttribute="bottom" id="NiZ-Wf-cmT"/>
+                            <constraint firstItem="yJM-Za-WPu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="QyB-ma-nM1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cyT-BZ-laX" secondAttribute="bottom" id="aKk-zJ-xVp"/>
-                            <constraint firstItem="cyT-BZ-laX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dRr-u4-EF9"/>
                             <constraint firstItem="cyT-BZ-laX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iY3-4e-0Xr"/>
                         </constraints>
                     </view>
@@ -65,11 +75,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="cyT-BZ-laX" id="xt3-WL-0pT"/>
+                        <segue destination="faa-j2-kFR" kind="showDetail" identifier="cellSegue" id="AKr-mw-PQo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057.2519083969464" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="1052.6717557251909" y="-27.464788732394368"/>
         </scene>
         <!--Input View Controller-->
         <scene sceneID="XWH-C1-NkG">
@@ -79,7 +90,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmf-Mt-2Uc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmf-Mt-2Uc">
                                 <rect key="frame" x="10" y="113" width="373" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -90,14 +101,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lxp-Q0-S4M">
-                                <rect key="frame" x="10" y="188" width="373" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lxp-Q0-S4M">
+                                <rect key="frame" x="10" y="263" width="373" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bxv-fq-EyF">
-                                <rect key="frame" x="10" y="219" width="373" height="120"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bxv-fq-EyF">
+                                <rect key="frame" x="10" y="302" width="373" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="RDx-BC-sMX"/>
@@ -107,38 +118,56 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="cLV-1U-wey">
-                                <rect key="frame" x="0.0" y="349" width="393" height="120"/>
+                            <datePicker contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="cLV-1U-wey">
+                                <rect key="frame" x="0.0" y="432" width="393" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="Qai-Wm-JXz"/>
                                 </constraints>
                             </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pQ-Vq-bJ8">
+                                <rect key="frame" x="10" y="188" width="373" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DDw-mM-Zjf">
+                                <rect key="frame" x="10" y="219" width="373" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Slx-LU-yi1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Lxp-Q0-S4M" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="3pw-es-GbR"/>
+                            <constraint firstItem="DDw-mM-Zjf" firstAttribute="top" secondItem="3pQ-Vq-bJ8" secondAttribute="bottom" constant="10" id="46e-tJ-rWY"/>
                             <constraint firstItem="bxv-fq-EyF" firstAttribute="top" secondItem="Lxp-Q0-S4M" secondAttribute="bottom" constant="10" id="8Na-Ss-fnu"/>
-                            <constraint firstItem="Lxp-Q0-S4M" firstAttribute="top" secondItem="uag-0i-wTA" secondAttribute="bottom" constant="10" id="GlT-y7-zV2"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="Lxp-Q0-S4M" secondAttribute="trailing" constant="10" id="HVO-w4-jXc"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="uag-0i-wTA" secondAttribute="trailing" constant="10" id="Hf3-6w-S7i"/>
                             <constraint firstItem="cLV-1U-wey" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" id="HpF-YD-KYe"/>
+                            <constraint firstItem="DDw-mM-Zjf" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="Ryw-7b-Al2"/>
                             <constraint firstItem="bxv-fq-EyF" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="Sfw-F3-3cf"/>
                             <constraint firstItem="nmf-Mt-2Uc" firstAttribute="top" secondItem="Slx-LU-yi1" secondAttribute="top" constant="10" id="VlN-8E-bm3"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="bxv-fq-EyF" secondAttribute="trailing" constant="10" id="byP-yL-ges"/>
                             <constraint firstAttribute="trailing" secondItem="cLV-1U-wey" secondAttribute="trailing" id="dfI-wi-QxS"/>
                             <constraint firstItem="cLV-1U-wey" firstAttribute="top" secondItem="bxv-fq-EyF" secondAttribute="bottom" constant="10" id="do4-zC-eQp"/>
+                            <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="3pQ-Vq-bJ8" secondAttribute="trailing" constant="10" id="kBL-I7-XnN"/>
+                            <constraint firstItem="3pQ-Vq-bJ8" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="r7F-kf-Ip7"/>
+                            <constraint firstItem="3pQ-Vq-bJ8" firstAttribute="top" secondItem="uag-0i-wTA" secondAttribute="bottom" constant="10" id="rHK-Kx-bOt"/>
                             <constraint firstItem="nmf-Mt-2Uc" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="ugi-eU-fbT"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="nmf-Mt-2Uc" secondAttribute="trailing" constant="10" id="xKI-3Q-hnG"/>
+                            <constraint firstItem="Lxp-Q0-S4M" firstAttribute="top" secondItem="DDw-mM-Zjf" secondAttribute="bottom" constant="10" id="xcc-z5-m6n"/>
                             <constraint firstItem="uag-0i-wTA" firstAttribute="top" secondItem="nmf-Mt-2Uc" secondAttribute="bottom" constant="10" id="yO0-XN-fnF"/>
+                            <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="DDw-mM-Zjf" secondAttribute="trailing" constant="10" id="ytW-cY-OxH"/>
                             <constraint firstItem="uag-0i-wTA" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="yxK-9b-QuW"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wrO-lh-wWG"/>
                     <connections>
+                        <outlet property="categoryTextField" destination="DDw-mM-Zjf" id="dhE-qA-3wR"/>
                         <outlet property="contentsTextView" destination="bxv-fq-EyF" id="yoL-cV-aJr"/>
                         <outlet property="datePicker" destination="cLV-1U-wey" id="Rts-4x-Uxj"/>
-                        <outlet property="tetleTextField" destination="uag-0i-wTA" id="CVp-gc-jk1"/>
+                        <outlet property="titleTextField" destination="uag-0i-wTA" id="NsV-ic-hHO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R8Y-8k-HGJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -165,6 +194,9 @@
             <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="rhI-qa-ELv"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
