--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -74,6 +74,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categorySearch" destination="yJM-Za-WPu" id="pot-1R-MNL"/>
                         <outlet property="tableView" destination="cyT-BZ-laX" id="xt3-WL-0pT"/>
                         <segue destination="faa-j2-kFR" kind="showDetail" identifier="cellSegue" id="AKr-mw-PQo"/>
                     </connections>
@@ -107,8 +108,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bxv-fq-EyF">
-                                <rect key="frame" x="10" y="302" width="373" height="120"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bxv-fq-EyF">
+                                <rect key="frame" x="10" y="294" width="373" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="RDx-BC-sMX"/>
@@ -118,8 +119,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <datePicker contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="cLV-1U-wey">
-                                <rect key="frame" x="0.0" y="432" width="393" height="120"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="cLV-1U-wey">
+                                <rect key="frame" x="0.0" y="424" width="393" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="Qai-Wm-JXz"/>
                                 </constraints>
@@ -173,6 +174,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R8Y-8k-HGJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1977.8625954198471" y="-27.464788732394368"/>
+        </scene>
+        <!--Category View Controller-->
+        <scene sceneID="Q3W-ga-EDg">
+            <objects>
+                <viewController id="lJ1-uq-7HS" customClass="CategoryViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cZu-Wr-R3L">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="wF0-8e-bW6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kth-Fj-2RK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2909" y="-27"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="n7X-W7-rSb">
