--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -129,19 +129,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gUr-AU-sKK">
-                                <rect key="frame" x="10" y="206.33333333333334" width="270" height="44"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUr-AU-sKK">
+                                <rect key="frame" x="10" y="206.33333333333334" width="320" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="oEB-EG-I9T"/>
                                 </constraints>
                             </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thO-VX-bPY">
-                                <rect key="frame" x="305" y="206.33333333333334" width="75" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thO-VX-bPY">
+                                <rect key="frame" x="324" y="206.33333333333334" width="56" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="aiK-AT-d4I"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="追加"/>
+                                <connections>
+                                    <segue destination="lJ1-uq-7HS" kind="show" id="aWN-R0-GD9"/>
+                                </connections>
                             </button>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="cLV-1U-wey">
                                 <rect key="frame" x="0.0" y="421.33333333333326" width="390" height="216"/>
@@ -151,8 +154,8 @@
                         <viewLayoutGuide key="safeArea" id="Slx-LU-yi1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="thO-VX-bPY" firstAttribute="leading" secondItem="gUr-AU-sKK" secondAttribute="trailing" constant="10" id="2wB-Gf-C9f"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="nmf-Mt-2Uc" secondAttribute="trailing" constant="10" id="5Rm-c7-Bt4"/>
+                            <constraint firstItem="thO-VX-bPY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Slx-LU-yi1" secondAttribute="leading" symbolic="YES" id="8vK-Tu-4nu"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="thO-VX-bPY" secondAttribute="trailing" constant="10" id="A1h-DM-RDN"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="Lxp-Q0-S4M" secondAttribute="trailing" constant="10" id="BBv-EE-g3l"/>
                             <constraint firstItem="uag-0i-wTA" firstAttribute="top" secondItem="nmf-Mt-2Uc" secondAttribute="bottom" constant="10" id="CwH-8d-be4"/>
@@ -162,7 +165,6 @@
                             <constraint firstItem="bxv-fq-EyF" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="Llg-dd-unH"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="3pQ-Vq-bJ8" secondAttribute="trailing" constant="10" id="PxO-j8-KjF"/>
                             <constraint firstItem="thO-VX-bPY" firstAttribute="top" secondItem="3pQ-Vq-bJ8" secondAttribute="bottom" constant="10" id="RNF-Ot-sl8"/>
-                            <constraint firstItem="thO-VX-bPY" firstAttribute="leading" secondItem="gUr-AU-sKK" secondAttribute="trailing" constant="10" id="Ra0-zS-xdi"/>
                             <constraint firstItem="Slx-LU-yi1" firstAttribute="trailing" secondItem="uag-0i-wTA" secondAttribute="trailing" constant="10" id="Rgf-cY-EJq"/>
                             <constraint firstItem="nmf-Mt-2Uc" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="Ugv-Ga-fmk"/>
                             <constraint firstItem="3pQ-Vq-bJ8" firstAttribute="top" secondItem="uag-0i-wTA" secondAttribute="bottom" constant="10" id="dIf-dQ-UUq"/>
@@ -170,8 +172,8 @@
                             <constraint firstItem="Lxp-Q0-S4M" firstAttribute="top" secondItem="thO-VX-bPY" secondAttribute="bottom" constant="10" id="h0i-gh-HB4"/>
                             <constraint firstItem="nmf-Mt-2Uc" firstAttribute="top" secondItem="Slx-LU-yi1" secondAttribute="top" constant="10" id="ijq-qs-hvd"/>
                             <constraint firstItem="uag-0i-wTA" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="mzU-54-ZlH"/>
+                            <constraint firstItem="gUr-AU-sKK" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="td7-ip-9Ap"/>
                             <constraint firstItem="Lxp-Q0-S4M" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="vgB-Ej-JPp"/>
-                            <constraint firstItem="gUr-AU-sKK" firstAttribute="leading" secondItem="Slx-LU-yi1" secondAttribute="leading" constant="10" id="xwN-PW-CEc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wrO-lh-wWG">
@@ -182,6 +184,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categoryPicker" destination="gUr-AU-sKK" id="rLa-hq-oIu"/>
                         <outlet property="contentsTextView" destination="bxv-fq-EyF" id="yoL-cV-aJr"/>
                         <outlet property="datePicker" destination="cLV-1U-wey" id="Rts-4x-Uxj"/>
                         <outlet property="titleTextField" destination="uag-0i-wTA" id="NsV-ic-hHO"/>
@@ -232,6 +235,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="追加"/>
+                                <connections>
+                                    <action selector="saveButton:" destination="lJ1-uq-7HS" eventType="touchUpInside" id="4Qh-Ey-zXy"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vDg-Hb-P6V">
                                 <rect key="frame" x="10" y="151" width="370" height="34"/>
@@ -286,6 +292,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="RJG-Ro-Y0C"/>
         <segue reference="AKr-mw-PQo"/>
     </inferredMetricsTieBreakers>
     <resources>
